--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<div id="#text-container"></div>
 	<div class="i-button">
-		
+		<div id="curious">Curious to know what it is?</div>
 		<div onclick="displayContent()" class="btn"><button>i</button></div>
 	</div>
 	<div class="slider1Container">
